# ProtectMyImages

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
src/: cli.rs  error.rs  lib.rs  main.rs  parallel.rs  processor.rs  simd.rs
src/formats/: gif.rs  jpeg.rs  mod.rs  png.rs  tiff.rs  webp.rs
src/terminal/: colors.rs  mod.rs  progress.rs
tests/: integration.rs
